--- a/index.html
+++ b/index.html
@@ -5,32 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="utils.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Calculator made by me</title>
 </head>
 <body>
-     <h1 class="text-centre">CALCULATOR </h1>
+    
+    <h1 class="text-centre">CALCULATOR </h1>
     <div class="container flex flex-col  items-center  mx-auto m-w-20 ">
         <div class="row">
             <input class="input" type="text">
         </div>
         <div class="Row">
+            <button class="Button">C</button>
+            <button class="Button">%</button>
+            <button class="Button">M+</button>
+            <button class="Button">M-</button>
+        </div>
+        <div class="Row">
             <button class="Button">7</button>
             <button class="Button">8</button>
             <button class="Button">9</button>
-            <button class="Button">X</button>
+            <button class="Button">*</button>
         </div>
         <div class="Row">
             <button class="Button">4</button>
             <button class="Button">5</button>
             <button class="Button">6</button>
-            <button class="Button">X</button>
+            <button class="Button">/</button>
         </div>
         <div class="Row">
             <button class="Button">1</button>
             <button class="Button">2</button>
             <button class="Button">3</button>
-            <button class="Button">X</button>
+            <button class="Button">+</button>
         </div>
+        <div class="Row">
+            <button class="Button">0</button>
+            <button class="Button">.</button>
+            <button class="Button">=</button>
+            <button class="Button">-</button>
+        </div>
+       
     </div>
+    <script src="static.js"></script>
 </body>
 </html>
